tests/lean/1079.lean.expected.out
1079.lean:3:2-6:12: error: alternative 'isFalse' has not been provided
[Meta.Tactic.simp.discharge] >> discharge?: m = n
[Meta.Tactic.simp.unify] @eq_self:1000, failed to unify
      ?a = ?a
    with
      m = n
[Meta.Tactic.simp.unify] Nat.succ.injEq:1000, failed to unify
      Nat.succ ?n = Nat.succ ?n
    with
      m = n
[Meta.Tactic.simp.rewrite] h:1000, m ==> n
[Meta.Tactic.simp.rewrite] @eq_self:1000, n = n ==> True
[Meta.Tactic.simp.rewrite] ↓ @ite_cond_true:1000, if m = n then Ordering.eq else Ordering.gt ==> Ordering.eq
[Meta.Tactic.simp.unify] @eq_self:1000, failed to unify
      ?a = ?a
    with
      Ordering.eq = Ordering.lt
[Meta.Tactic.simp.rewrite] false_implies:1000, False → False ==> True
